<resources>
    <string name="app_name">GoBusker!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="textview">TextView</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="busker">Busker</string>
    <string name="fan">Fan</string>
    <string name="forgot">forgot</string>
    <string name="gobusker">GoBusker</string>
    <string name="imageheader">ImageHeader</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fanpay">Donate</string>
    <string name="revolut">10 Euro<a href="https://www.crunchyroll.com/attack-on-titan/episode-11-icon-the-battle-for-trost-7-623911"></a></string>


    <string-array name="fandonate">
        <item>Amount</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>


    <!-- Intro slider -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>