<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Busker.buskerForgot">

    <TextView
        android:id="@+id/tvHeading8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/gobusker"
        android:textSize="55sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/ivCrotchet8"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCrotchet8"
        android:layout_width="149dp"
        android:layout_height="135dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/imageheader"
        android:src="@drawable/gobuskerimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBuskerForgotEmail"
        android:layout_width="393dp"
        android:layout_height="58dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading8" />

    <Button
        android:id="@+id/btnBuskerForgotEmail"
        android:layout_width="387dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:text="@string/reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuskerForgotEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>