<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fan.fanForgot"
    android:background="@color/white">

    <Button
        android:id="@+id/btnFanForgotEmail"
        android:layout_width="387dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:text="@string/reset_password"
        android:background="@drawable/background_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFanForgotEmail" />

    <TextView
        android:id="@+id/tvHeading9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/gobusker"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/ivCrotchet9"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFanForgotEmail"
        android:layout_width="393dp"
        android:layout_height="58dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/edit_text"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading9"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/ivCrotchet9"
        android:layout_width="149dp"
        android:layout_height="135dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/imageheader"
        android:src="@drawable/gobuskerimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>